# pysimdb

./: .gitignore  MANIFEST.in  README.md  example.py  main.py  pypi_description.md  pyproject.toml  requirements.txt  setup.py  test_package.py  tests.py
.github/workflows/: auto-version.yml  code-quality.yml  publish-to-pypi.yml  test.yml
pysimdb/: __init__.py  database.py  query_builder.py  schema.py  storage.py
